[gd_scene load_steps=7 format=3 uid="uid://damar1eblu4kt"]

[ext_resource type="Theme" uid="uid://dpmq2vuic315u" path="res://shared/UiTheme.tres" id="1_4v6ov"]
[ext_resource type="Script" path="res://ui/GameUi/GameUi.gd" id="2_6iou8"]

[sub_resource type="Curve" id="Curve_5wycg"]
_data = [Vector2(0.00658979, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_vne32"]
curve = SubResource("Curve_5wycg")

[sub_resource type="Curve" id="Curve_a01xv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wxjmu"]
curve = SubResource("Curve_a01xv")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4v6ov")
script = ExtResource("2_6iou8")

[node name="Paused" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Underlay" type="ColorRect" parent="Paused"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.25098)

[node name="CenterContainer" type="CenterContainer" parent="Paused"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Paused/CenterContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Game Paused"

[node name="Desktop" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftGrid" type="GridContainer" parent="Desktop"]
layout_mode = 1
offset_right = 350.0
offset_bottom = 147.0
focus_mode = 1

[node name="Zoom" type="HBoxContainer" parent="Desktop/LeftGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/LeftGrid/Zoom"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zoom"
horizontal_alignment = 2

[node name="Slider" type="HSlider" parent="Desktop/LeftGrid/Zoom"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
min_value = 0.5
max_value = 6.0
step = 0.01
value = 1.0

[node name="Speed" type="HBoxContainer" parent="Desktop/LeftGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/LeftGrid/Speed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Speed"
horizontal_alignment = 2

[node name="Slider" type="HSlider" parent="Desktop/LeftGrid/Speed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 500.0

[node name="GameSpeed" type="HBoxContainer" parent="Desktop/LeftGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/LeftGrid/GameSpeed"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game Speed"
horizontal_alignment = 2

[node name="Slider" type="HSlider" parent="Desktop/LeftGrid/GameSpeed"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
min_value = 0.1
max_value = 10.0
step = 0.01
value = 1.0

[node name="HFlowContainer" type="GridContainer" parent="Desktop/LeftGrid"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 1
theme_override_constants/h_separation = 4
columns = 3

[node name="LevelUp" type="Button" parent="Desktop/LeftGrid/HFlowContainer"]
layout_mode = 2
focus_mode = 1
text = "Level Up"

[node name="NewGame" type="Button" parent="Desktop/LeftGrid/HFlowContainer"]
layout_mode = 2
focus_mode = 1
text = "New Game"

[node name="PlayerDamage" type="CheckButton" parent="Desktop/LeftGrid/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Damage"

[node name="PauseBtn" type="Button" parent="Desktop/LeftGrid/HFlowContainer"]
layout_mode = 2
focus_mode = 1
text = "Pause"

[node name="EndRun" type="Button" parent="Desktop/LeftGrid/HFlowContainer"]
layout_mode = 2
focus_mode = 1
text = "End Run"

[node name="CenterGrid" type="GridContainer" parent="Desktop"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_right = 175.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/v_separation = 32

[node name="Health" type="HBoxContainer" parent="Desktop/CenterGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Bar" type="TextureProgressBar" parent="Desktop/CenterGrid/Health"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
step = 0.0
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("CurveTexture_vne32")
texture_progress = SubResource("CurveTexture_wxjmu")
tint_under = Color(0.25, 0.25, 0.25, 1)
tint_progress = Color(1, 0, 0, 1)

[node name="Experience" type="HBoxContainer" parent="Desktop/CenterGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Bar" type="TextureProgressBar" parent="Desktop/CenterGrid/Experience"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
step = 0.0
value = 50.0
nine_patch_stretch = true
texture_under = SubResource("CurveTexture_vne32")
texture_progress = SubResource("CurveTexture_wxjmu")
tint_under = Color(0.25, 0.25, 0.25, 1)
tint_progress = Color(0, 1, 0.983333, 1)

[node name="RightGrid" type="GridContainer" parent="Desktop"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_bottom = 120.0
grow_horizontal = 0

[node name="Fps" type="HBoxContainer" parent="Desktop/RightGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/RightGrid/Fps"]
layout_mode = 2
size_flags_horizontal = 3
text = "FPS"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Desktop/RightGrid/Fps"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="PhysicsFps" type="HBoxContainer" parent="Desktop/RightGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/RightGrid/PhysicsFps"]
layout_mode = 2
size_flags_horizontal = 3
text = "Physics FPS"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Desktop/RightGrid/PhysicsFps"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="PlayTime" type="HBoxContainer" parent="Desktop/RightGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/RightGrid/PlayTime"]
layout_mode = 2
size_flags_horizontal = 3
text = "Play Time"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Desktop/RightGrid/PlayTime"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="GameState" type="HBoxContainer" parent="Desktop/RightGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Desktop/RightGrid/GameState"]
layout_mode = 2
size_flags_horizontal = 3
text = "Game State"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Desktop/RightGrid/GameState"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="Mobile" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="value_changed" from="Desktop/LeftGrid/Zoom/Slider" to="." method="_on_zoom_change"]
[connection signal="value_changed" from="Desktop/LeftGrid/Speed/Slider" to="." method="_on_speed_change"]
[connection signal="value_changed" from="Desktop/LeftGrid/GameSpeed/Slider" to="." method="_on_game_speed_change"]
[connection signal="pressed" from="Desktop/LeftGrid/HFlowContainer/LevelUp" to="." method="_on_level_up_btn_pressed"]
[connection signal="pressed" from="Desktop/LeftGrid/HFlowContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="toggled" from="Desktop/LeftGrid/HFlowContainer/PlayerDamage" to="." method="_on_player_damage_toggled"]
[connection signal="pressed" from="Desktop/LeftGrid/HFlowContainer/PauseBtn" to="." method="_on_pause_btn_pressed"]
[connection signal="pressed" from="Desktop/LeftGrid/HFlowContainer/EndRun" to="." method="_on_end_run_pressed"]
